fix grid on tablet

--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,7 @@ body {
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
-
-    border-radius: .4rem;
+    border-radius: .6rem;
     box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 24.74%);
 }
 
@@ -155,17 +154,17 @@ body {
 
     .card:nth-child(2) {
         grid-row: 2 / 2;
-        grid-column: 1 / 6;
+        grid-column: 1 / 2;
     }
 
     .card:nth-child(3) {
-        grid-row: 3 / 3;
-        grid-column: 1 / 2;
+        grid-row: 2 / 2;
+        grid-column: 2 / 6;
     }
 
     .card:nth-child(4) {
         grid-row: 3 / 3;
-        grid-column: 2 / 6;
+        grid-column: 1 / 6;
     }
 
     .card:nth-child(5) {
